# advent2023

./: .clang-format  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env
.github/workflows/: ci.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/advent2023/: sample_library.hpp
src/: CMakeLists.txt
src/advent2023/: CMakeLists.txt  main.cpp
src/day/: CMakeLists.txt  main.cpp
src/day1/: CMakeLists.txt  main.cpp
src/day2/: CMakeLists.txt  limit.txt  main.cpp
src/day3/: CMakeLists.txt  main.cpp
src/day3_benchmark/: CMakeLists.txt  benchmark.cpp  link_list_returns.cpp  original.cpp
src/day4/: CMakeLists.txt  main.cpp
src/day4_b/: CMakeLists.txt  main.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
